# airboltic

./: README.md  pyproject.toml
airboltic/: .user.yml  README.md  dbt_project.yml  profiles.yml
airboltic/models/enriched/: airplane_details_inc.md  airplane_details_inc.sql  customer_details_inc.md  customer_details_inc.sql  order_details_inc.md  order_details_inc.sql  schema.yml
airboltic/models/landing/airplanes/: airplane_models_inc.md  airplane_models_inc.sql  airplanes_inc.md  airplanes_inc.sql  schema.yml  sources.yml
airboltic/models/landing/customers/: customer_group_inc.md  customer_group_inc.sql  customers_inc.md  customers_inc.sql  schema.yml  sources.yml
airboltic/models/landing/transactions/: orders_inc.md  orders_inc.sql  schema.yml  sources.yml  trips_inc.md  trips_inc.sql
airboltic/models/semantic/: airplane_orders_summary_inc.md  airplane_orders_summary_inc.sql  customer_group_summary_inc.md  customer_group_summary_inc.sql  executive_summary_inc.md  executive_summary_inc.sql  schema.yml  unit_test.yml
