[project]
name = "airboltic"
version = "0.1.0"
description = "Airboltic Project dependencies"
authors = [
    {name = "nishant",email = "abc@xyz.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-duckdb (>=1.9.3,<2.0.0)",
    "duckdb (>=1.2.2,<2.0.0)",
]

[tool.poetry]
packages = [{include = "airboltic", from = "src"}]


[tool.poetry.group.dev.dependencies]
sqlfluff = "^3.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
